# kistbook

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  kishtbook_prd_v2.md  kistbook_prd_v2.md  pyproject.toml  quickstart.md  spec.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
kistbook/: celery_app.py
kistbook/api/: deps.py  main.py
kistbook/api/routes/: admin.py  customers.py  logs.py  retailers.py  webhooks.py
kistbook/api/static/: index.html
kistbook/core/: config.py  logging.py  security.py
kistbook/db/: models.py  session.py
kistbook/db/migrations/: env.py
kistbook/db/migrations/versions/: 001_initial_schema.py
kistbook/engine/: branch.py  reply_handler.py  scanner.py  tasks.py  templates.py
kistbook/integrations/: wetarseel.py  whatsapp_types.py
kistbook/tests/: conftest.py  test_branch.py  test_import.py  test_scanner.py  test_tasks.py  test_webhooks.py
postman/: KistBook_POC.postman_collection.json  README.md
